# opensx_serial_server

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
docs/: 工作模式开发指南.md  接口说明.md  构建指南.md  烧录指南.md  配置字段说明.md
docs/modes/: mode_protocol_report_example.c  mode_protocol_report_example.h  工作模式示例说明.md
main/: CMakeLists.txt  Kconfig.projbuild
main/app/: sx_main.c
main/drivers/: sx_async_uart.c  sx_gpio.c  sx_modbus.c
main/include/: sx_ap_manager.h  sx_async_uart.h  sx_dns_server.h  sx_gpio.h  sx_http_client.h  sx_http_ota.h  sx_init_eth.h  sx_init_wifi.h  sx_log.h  sx_modbus.h  sx_mqtt_client.h  sx_network_manager.h  sx_protocol_api.h  sx_protocol_manager.h  sx_tcp_client.h  sx_tcp_server.h  sx_timer_tasks.h  sx_udp_server.h  sx_utils.h  sx_web_server.h  sx_wifi_scan.h  sx_work_mode.h  sx_work_mode_ids.h
main/json/: data.json
main/modes/: mode_protocol_test.c  mode_protocol_test.h  mode_tcp_transparent.c  mode_tcp_transparent.h  sx_builtin_modes.c
main/network/: sx_ap_manager.c  sx_dns_server.c  sx_init_eth.c  sx_init_wifi.c  sx_network_manager.c  sx_wifi_scan.c
main/protocols/: sx_http_client.c  sx_mqtt_client.c  sx_protocol_api.c  sx_protocol_manager.c  sx_tcp_client.c  sx_tcp_server.c  sx_udp_server.c
main/static/: brand-config.js  i18n.js  root.html  web.css  web.html  web.js
main/static/i18n/: en-US.json  zh-CN.json
main/system/: sx_log.c  sx_timer_tasks.c  sx_utils.c  sx_work_mode.c
main/web/: sx_http_ota.c  sx_web_server.c
