idf_component_register(
    SRCS "app/sx_main.c"
         "network/sx_init_wifi.c"
         "network/sx_init_eth.c"
         "network/sx_network_manager.c"
         "network/sx_ap_manager.c"
         "network/sx_dns_server.c"
         "network/sx_wifi_scan.c"
         "protocols/sx_protocol_manager.c"
         "protocols/sx_http_client.c"
         "protocols/sx_mqtt_client.c"
         "protocols/sx_tcp_client.c"
         "protocols/sx_tcp_server.c"
         "protocols/sx_udp_server.c"
         "protocols/sx_protocol_api.c"
         "web/sx_web_server.c"
         "web/sx_http_ota.c"
         "drivers/sx_gpio.c"
         "drivers/sx_async_uart.c"
         "drivers/sx_modbus.c"
         "system/sx_utils.c"
         "system/sx_log.c"
         "system/sx_timer_tasks.c"
         "system/sx_work_mode.c"

         # 工作模式
         "modes/mode_tcp_transparent.c"
         "modes/mode_protocol_test.c"
         "modes/sx_builtin_modes.c"

    INCLUDE_DIRS "include"
    INCLUDE_DIRS "."
    INCLUDE_DIRS "modes"
    EMBED_FILES "static/web.html"
                "static/root.html"
                "static/web.js"
                "static/web.css"
                "static/brand-config.js"
                "static/i18n.js"
                "static/i18n/zh-CN.json"
                "static/i18n/en-US.json"
                "server_certs/ca_cert.pem"
)
